perf: swag文档显示
